@@ -41,6 +41,6 @@
       }
    },
    "release_status" : "stable",
-   "version" : "0.37",
+   "version" : "0.38",
    "x_serialization_backend" : "JSON::PP version 2.27300"
 }
