@@ -23,5 +23,5 @@ requires:
   Math::BigInt::Calc: '1.999709'
   XSLoader: '0'
   perl: '5.006'
-version: '0.37'
+version: '0.38'
 x_serialization_backend: 'CPAN::Meta::YAML version 0.016'
