@@ -14,14 +14,14 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 2e17111119f63df1511c05fce824cb4b6220783c CHANGES
+SHA1 9cbb8570880de9946508fe24015f0f799a975953 CHANGES
 SHA1 58d7a00ab2a9f5448a561d49b5a2077efa245ac7 CREDITS
-SHA1 2261acc1a1f1ab8a2907380291dbde2063178aaa FastCalc.xs
+SHA1 49fd6e66d900cc6b6ca04191fe8fcb3f19603d62 FastCalc.xs
 SHA1 c00af0af44a912b550a7e86cd14fbaf0fcc421fc MANIFEST
 SHA1 b84f4d19c93c52aa32e5145cabce4f7e1ccb85a9 MANIFEST.SKIP
-SHA1 e0c710b42ac044767ee894243002bd83676ae4d0 META.json
-SHA1 d621ed1a1ececc77ef4ab5ff65d5e5b7372c287d META.yml
-SHA1 6dea1d5c6cb3bca28922256d07d77664c589ec7a Makefile.PL
+SHA1 9bb6572518e5d2b48b97bf03bc7f82e8854af4ed META.json
+SHA1 76d5b30082f7f7b90b6791a507aa139f4e6c0147 META.yml
+SHA1 e6827373e4856875e4126b7438b238170835951f Makefile.PL
 SHA1 e3642759d709f62d10e99d8480e0404ec48965c7 README
 SHA1 280c4f82fc9e7322fe2bbed7e5f595bfe9fe7783 TODO
 SHA1 bce3c51bb369419603298064b78e14077b93af66 inc/Module/Install.pm
@@ -32,7 +32,7 @@ SHA1 76efdca3603159e0ae0e18f19fe72a0211a69529 inc/Module/Install/Makefile.pm
 SHA1 2e33e87882d60db3913da6284dd5295e5315e18a inc/Module/Install/Metadata.pm
 SHA1 c830b819e61bda5eca077c6291293bba61b3b9f2 inc/Module/Install/Win32.pm
 SHA1 cb52b9d6f88d512d448a6f35ed0af0d1201a134b inc/Module/Install/WriteAll.pm
-SHA1 ba2897d259d213f4d1d60bec3be96bdd616a9fac lib/Math/BigInt/FastCalc.pm
+SHA1 48c62406fb142b9495699174229439601a45419a lib/Math/BigInt/FastCalc.pm
 SHA1 385cc7ed3bf3e6290640b9880445ca9a3dea629e t/00sig.t
 SHA1 2c720454ea4a111cb2e554a869e66234fafb40a8 t/01load.t
 SHA1 b2ed9206ca5b69ec3b8bbf850bf4b6dfde518e7e t/02pod.t
@@ -50,11 +50,11 @@ SHA1 ea92ee9bd46419eeaa434e9480b2e36391db8b41 t/mbimbf.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1
 
-iQEcBAEBAgAGBQJWQHhgAAoJEGcmPl2fr1665UUH/3SzpIGK6MAzpfVoYbYLEBnL
-/uk+OSxzJXzIpfWAAdkMWuO4geHXWjr0Sl18zzrzmnC0nXK/slhEZLCNBHx3iQV5
-XrwqOTSaBEx1yqIFr1DG2/Pgk/V/eAPrtNmq4+fWw9fALMmQNHSNvW4IoNwnXMvS
-W22iGXLNDhJVKhdCJKhnJD0zOOYUId4nZikD5LexQWoRfB2n3pqAnhvIMl7qVnGX
-fUPUNuplNDyeJDEjJx/XXF6fswxa5kPAq2WOYDflupGC+GdCkJivm+213yx5MwZ3
-hXq49EGR05678pilH/4PxwbWtcFwHbddcrldMhtzciUZUeCDQdMAAs0P2y5hmp8=
-=x6ja
+iQEcBAEBAgAGBQJWXw/EAAoJEGcmPl2fr166ZCsIAJ7eA+lFCmLt3uico5UipsZg
+GR2f4wYGz2gEY/qEKYiHoeybrtehO7kLT/qBd+kDeXnp8hAzM61cG2pUNEE+yLYv
+Yoxl0PZ52taHqbW+1iq0zFfGVALFzU9YmVnCTBwLrUwBGLtMHQko8uoKY3IsPYx/
+jlz0UO5u6upKRVCz/QGbogU0vjNLaYR3eVVRP95Vw+p7K7EumSX9GwX+9GEMm+Vo
+W4//LmN2nhHxkRkp73UKEICzgFQqrwI9OtS8HH9NJqjtbdP+ogM/F0cfiLBG0xhY
+4/UjXHnvH2aAfXe9pRsFlyLjqtmKeiRf2cFWD/6yyTH3PLR+oOk84lugq5UZyMY=
+=sDwV
 -----END PGP SIGNATURE-----
